/*
 * Copyright 2021, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.test.code.proto;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.code.proto";
option java_outer_classname = "ColumnOptionTestProto";
option java_multiple_files = true;

// An entity type with columns.
message CoProject {
    option(entity).kind = PROJECTION;

    CoProjectId id = 1;

    string name = 2 [(column) = true];

    Estimate estimate = 3 [(column) = true];

    Status status = 4;

    message Estimate {
        int32 man_hours = 1;
    }

    enum Status {
        UNDEFINED = 0;
        CREATED = 1;
        STARTED = 2;
        DONE = 3;
    }
}

// An entity type which declares no columns.
message CoTask {
    option(entity).kind = PROJECTION;
    CoTaskId id = 1;
    CoTaskDescription description = 2;
}

// A generic type non-eligible for having columns but nevertheless declaring one.
message CoTaskDescription {
    string value = 1 [(column) = true];
}

message CoProjectId {
    string uuid = 1;
}

message CoTaskId {
    string uuid = 1;
}
